my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/920410-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920410-1.c:3:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    3 | main(){int d[40000];d[0]=0;exit(0);}
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920410-1.c:3:28: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    3 | main(){int d[40000];d[0]=0;exit(0);}
      |                            ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/920410-1.c:3:28: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
2 errors generated.
